# lua-wane

./: README.md  lua-wane.cabal  stack.yaml
app/: Main.hs  Options.hs  Version.hs
src/Language/Lua/: MinPrinter.hs  ShortenNames.hs  Wane.hs
