name:                lua-wane
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sw17ch/lua-wane#readme
license:             BSD3
license-file:        LICENSE
author:              John Van Enk
maintainer:          sw17ch@gmail.com
copyright:           2016 John Van Enk
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Lua.Wane
  other-modules:       Language.Lua.MinPrinter, Language.Lua.ShortenNames
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , language-lua
                     , wl-pprint
  default-language:    Haskell2010

executable lua-wane
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lua-wane
                     , optparse-applicative
  default-language:    Haskell2010

test-suite lua-wane-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lua-wane
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sw17ch/lua-wane
